# api/swagger/swagger.yaml
@@ -5,7 +5,7 @@ info:
 # during dev, should point to your local machine
 host: localhost:10010
 # basePath prefixes all resource paths 
-basePath: /
+basePath: /api
 # 
 schemes:
   # tip: remove http to make production-grade
@@ -63,7 +63,19 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
-  
+      parameters:
+        - name: x-access-token
+          in: query
+          description: The name of the person to whom to say hello
+          default: bora_anani_yiyolar_yeee_yeee
+          required: true
+          type: string
+        - name: x-key
+          in: query
+          default: haydatest@hayda.com
+          description: The name of the person to whom to say hello
+          required: true
+          type: string
   
   
   
