# app.js
@@ -15,28 +15,30 @@ SwaggerExpress.create(config, function(err, swaggerExpress) {
 
 
   // Add headers
+
   app.use(function (req, res, next) {
-
-
     // Website you wish to allow to connect
     res.setHeader('Access-Control-Allow-Origin', '*');
-
-
     // Request methods you wish to allow
     res.setHeader('Access-Control-Allow-Methods', 'GET, POST, OPTIONS, PUT, PATCH, DELETE');
-
-
     // Request headers you wish to allow
-    res.setHeader('Access-Control-Allow-Headers', 'X-Requested-With,content-type');
-
-
-
+    res.setHeader('Access-Control-Allow-Headers', 'X-Requested-With,content-type,X-Access-Token,X-Key,Accept');
     next();
   });
 
+  app.all('/api/*', [require('./api/helpers/validateRequest')]);
   // install middleware
   swaggerExpress.register(app);
+
+
+
   require('./swagger-ui-router.js')(app);
+
+
+  // Auth Middleware - This will check if the token is valid
+
+
+
   var port = process.env.PORT || 10010;
   app.listen(port);
 
